# xmod

./: .coveragerc  .travis.yml  404.html  CHANGELOG  MANIFEST.in  README.md  README.rst  clod.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  test.sh  xmod.py  xmod.pyi
.github/workflows/: python-package.yml
docs/: index.md
test/: decorator.py  decorator_with_parameter.py  foo.py  foo2.py  foo3.py  looks_like_list.py  mutable_class.py  simple_class.py  simple_function.py  test_clod.py  test_xmod.py
test/modules/: actual_class.py  decorator.py  decorator_with_parameter.py  mutable_class.py  mutable_function.py  partial_function.py  simple_class.py  simple_function.py
typings/xmod/: __init__.pyi
xmod/: __init__.py
